--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <section class="home">
         <div class="home-content">
-            <h1>Bonjour, je suis étudiant en Master SIGAT</h1>
-            <h3>à Rennes 2</h3>
-            <p>Je suis actuellement à la recherche d'un stage dans le domaine de la géomatique pour une durée de 5 mois, à partir de mi-mai.</p>
+            <h1>Bonjour, je suis étudiant géomaticien</h1>
+            <h3>Actuellement en M2 SIGAT à l'université de Rennes 2</h3>
+            <p>Je suis à la recherche d'un stage dans le domaine de la géomatique pour une durée de 5 mois, à partir de mi-mai.</p>
             <div class="btn-box">
                 <section id="contact">
                     <h2>Contactez-moi</h2>
@@ -39,8 +39,7 @@
 
 
     </section>
-
-
+        
 </body>
 
 
