--- a/MesCompetences.html
+++ b/MesCompetences.html
@@ -18,8 +18,11 @@
 
     <section class="cv">
         <div class="container">
-            <!-- Ajout de l'image du CV -->
             <img src="CV.png" alt="Mon CV" class="cv-image">
+        </div>
+        <!-- Bouton placé en bas de la section -->
+        <div class="download-container">
+            <a href="CV_Emmanuel_de_Smirnoff.pdf" download="CV_Emmanuel_de_Smirnoff" class="download-btn">Télécharger mon CV</a>
         </div>
     </section>
 </body>
