--- a/cartes.html
+++ b/cartes.html
@@ -11,6 +11,7 @@
         <a href="index.html" class="logo">Emmanuel de Smirnoff</a>
         <nav class="navbar">
             <a href="index.html">Accueil</a>
+            <a href="webmap.html">WebMap</a>
             <a href="cartes.html" class="active">Portfolio</a>
             <a href="MesCompetences.html">CV</a>
         </nav>
