--- a/MesCompetences.html
+++ b/MesCompetences.html
@@ -11,6 +11,7 @@
         <a href="index.html" class="logo">Emmanuel de Smirnoff</a>
         <nav class="navbar">
             <a href="index.html">Accueil</a>
+            <a href="webmap.html">WebMap</a>
             <a href="cartes.html">Portfolio</a>
             <a href="MesCompetences.html" class="active">CV</a>
         </nav>
